# SleepTTE

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
config/: config.yaml  dev.yaml  prod.yaml
docs/: data_access_guide.md  data_source_feasibility.md
docs/api/: API_CONTRACT.md
docs/deployment/: FREE_DEMO_DEPLOYMENT.md
docs/execution/: DECISION_LOG.md  PROGRESS_LOG.md  TASK_BOARD.md
platform/: clinician_dashboard.py  demo_data.py  patient_app.py
scripts/: download_physionet_sleep.py  rotate_logs.py
src/: __init__.py
src/api/: __init__.py  app.py
src/data/: make_dataset.py  utils.py
src/features/: sleep_features.py
src/models/: brain_age_model.py  causal_inference.py
src/utils/: event_logger.py  event_summary.py  log_maintenance.py  stats.py
src/visualization/: plots.py
tests/: __init__.py  test_api_skeleton.py  test_config_loader.py  test_core.py  test_event_logger.py  test_event_summary.py  test_log_maintenance.py  test_regressions.py
